# drjit

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README.rst  problem.py  pyproject.toml  setup.py  test.py  test_ad.py  test_basics.py  test_complex.py  test_conversions.py  test_exchange.py  test_matrix.py  test_tensor.py
.github/workflows/: build.yml  pypi.yml  tmp.yml  wheels.yml
doc-old/: changelog.rst  conf.py  loops.rst  requirements.txt  struct.rst
doc-old/unused/: matrix.rst  reference.rst  sh.rst
docs/: advanced.rst  array_types.rst  autodiff.rst  basics.rst  bench.rst  building.rst  calls.rst  cflow.rst  changelog.rst  conf.py  coop_vec.rst  cpp.rst  cuda.rst  custom.rst  debug.rst  demo.rst  eval.rst  faq.rst  firststeps-cpp.rst  firststeps-py.rst  freeze.rst  general.rst  index.rst  interop.rst  intro.rst  loop.rst  loops.rst  matrix.rst  misc.rst  nn.rst  optim.rst  python.rst  pytrees.rst  random.rst  reference.rst  release.rst  release_notes.rst  requirements-rtd.txt  requirements.txt  special.rst  (+6 more)
docs-old/: basics.rst  calls.rst  custom.rst  demo.rst
docs-old/_static/: theme_overrides.css
docs-old/unused/: color.rst  half.rst  quaternions.rst  reference.rst
docs/_static/: drjit.css  theme_overrides.css
docs/static/: custom.css
docs/unused/: advanced.rst  complex.rst  dynamic.rst  gpu.rst  morton.rst  nested.rst  reference.rst  transform.rst
drjit/: __init__.py  _reduce.py  _sh_eval.py  ast.py  bench.py  const.py  coop.py  dda.py  detail.py  freeze.py  generic.py  hashgrid.py  hgrid.py  interop.py  matrix.py  nn.py  opt.py  random.py  router.py  stubs.pat  tensor.py  torch.py  traits.py
drjit-old/: generic.py  router.py  traits.py
drjit/amd/: __init__.py  ad.py
drjit/scalar/: ad.py
enoki/: __init__.py  const.py  detail.py  generic.py  matrix.py  router.py  traits.py
include/drjit/: array.h  array_base.h  array_constants.h  array_format.h  array_generic.h  array_iface.h  array_mask.h  array_router.h  array_static.h  array_traits.h  array_traverse.h  array_utils.h  autodiff.h  autodiff2.h  autodiff_old.h  call.h  color.h  complex.h  custom.h  custom_old.h  dynamic.h  extra.h  freeze.h  frozen.h  fwd.h  half.h  idiv.h  if_stmt.h  jit.h  local.h  loop.h  map.h  math.h  matrix.h  morton.h  packet.h  packet_avx.h  packet_avx2.h  packet_avx512.h  packet_intrin.h  (+25 more)
include/enoki/: array.h  array_base.h  array_constants.h  array_generic.h  array_mask.h  array_router.h  array_static.h  array_struct.h  array_traits.h  array_utils.h  autodiff.h  color.h  complex.h  cuda.h  custom.h  dynamic.h  fwd.h  half.h  idiv.h  jit.h  llvm.h  loop.h  map.h  math.h  matrix.h  morton.h  packet.h  packet_avx.h  packet_avx2.h  packet_avx512.h  packet_intrin.h  packet_kmask.h  packet_recursive.h  packet_sse42.h  quaternion.h  random.h  sh.h  sphere.h  string.h  struct.h  (+11 more)
resources/: archflags_unix.cpp  auto-stub.cmake  config.py.in  drjitConfig.cmake.in  drjit_gdb.py  drjit_lldb.py  enokiConfig.cmake.in  generate_stub_files.py  normalize_changelog_links.py  remez-filter.py  remez.cpp  remez.h  remez.sh
src/autodiff/: CMakeLists.txt  autodiff.cpp  common.cpp  common.h
src/extra/: CMakeLists.txt  autodiff.cpp  call.cpp  common.h  cond.cpp  dispatch.cpp  loop.cpp  math.cpp  resample.cpp  texture.cpp  vcall.cpp
src/python/: CMakeLists.txt  amd.cpp  amd.h  amd_ad.cpp  apply.cpp  apply.h  array_autodiff.cpp  array_builtin.cpp  array_init.cpp  array_math.cpp  array_misc.cpp  autodiff.cpp  autodiff.h  base.cpp  base.h  bind.cpp  bind.h  bind_cuda.cpp  bind_cuda_ad.cpp  bind_llvm.cpp  bind_llvm_ad.cpp  bind_packet.cpp  bind_scalar.cpp  common.h  constants.cpp  coop_vec.cpp  coop_vec.h  cuda.cpp  cuda.h  cuda_ad.cpp  detail.cpp  detail.h  dispatch.cpp  dispatch.h  dlpack.cpp  dlpack.h  docstr.h  docstr.py  docstr.rst  eval.cpp  (+84 more)
src/python/old/: bind.h  bind_cuda.cpp  bind_cuda_ad.cpp  bind_llvm.cpp  bind_llvm_ad.cpp  bind_packet.cpp  bind_scalar.cpp  common.h  dlpack.cpp  implicit.cpp  loop.h  main.cpp  random.h  reinterpret.cpp  tensor.h  texture.h
tests/: CMakeLists.txt  ad_megakernel.cpp  autodiff.cpp  basic.cpp  bench_gemm.py  call.cpp  call_ext.cpp  color.cpp  complex.cpp  conftest.py  conv.cpp  custom.cpp  custom_type_ext.cpp  dynamic.cpp  explog.cpp  float.cpp  histogram.cpp  horiz.cpp  hyperbolic.cpp  idiv.cpp  if_stmt_ext.cpp  integer.cpp  interop.py  local_ext.cpp  loop.cpp  loop_ext.cpp  matrix.cpp  memop_ext.cpp  memory.cpp  memory2.cpp  morton.cpp  nested.cpp  py_cpp_consistency_ext.cpp  queue_ext.cpp  ray.h  sh.cpp  special.cpp  sphere.cpp  struct.cpp  test.h  (+73 more)
tests/python/: test.cpp  test_ad.py  test_autodiff.py  test_basics.py  test_complex.py  test_conversions.py  test_jit.py  test_loop.py  test_matrix.py  test_pytorch.py  test_quaternion.py  test_reduce.py  test_simple.py  test_struct.py  test_switch.py  test_tensor.py  test_traits.py  test_wrap.py  test_wrap_ad.py
wheelhouse/: drjit-0.2.0.dev3-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  drjit-0.2.0.dev3-pp37-pypy37_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
