[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[project]
name = "drjit"
version = "0.4.1"
description = "A Just-In-Time-Compiler for Differentiable Rendering",
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    "Wenzel Jakob <wenzel.jakob@epfl.ch>",
    "Sebastien Speierer <sebastien.speierer@epfl.ch>",
    "Nicolas Roussel <nicolas.roussel@epfl.ch>"
]

classifiers = [
    "License :: BSD"
]

[project.urls]
homepage = "https://github.com/mitsuba-renderer/drjit"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"


[tool.pytest.ini_options]
norecursedirs = [ "ext" ]
