[build-system]
requires = [
    "scikit-build-core",
    "nanobind @ git+https://github.com/wjakob/nanobind@master",
    "typing_extensions"
]
build-backend = "scikit_build_core.build"


[project]
name = "drjit"
version = "1.0.0"
description = "Dr.Jit: A Just-In-Time Compiler for Differentiable Rendering"
readme = "README.rst"
dependencies = [
  "typing_extensions;python_version<\"3.11\""
]
requires-python = ">=3.8"
authors = [
    { name = "Wenzel Jakob", email = "wenzel.jakob@epfl.ch" },
    { name = "Sébastien Speierer", email = "sebastien.speierer@epfl.ch" },
    { name = "Nicolas Roussel", email = "nicolas.roussel@epfl.ch" },
    { name = "Delio Vicini", email = "delio.vicini@epfl.ch" }
]
classifiers = [
    "License :: OSI Approved :: BSD License"
]

[project.urls]
Homepage = "https://github.com/mitsuba-renderer/drjit"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

cmake.verbose = true

logging.level = "INFO"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
archs = ["auto64"]
skip = "*-musllinux* pp*"

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.cibuildwheel.linux]
before-all = "yum install -y libatomic"


[tool.pytest.ini_options]
norecursedirs = [ "ext" ]
